--- a/namenode/Dockerfile
+++ b/namenode/Dockerfile
@@ -5,7 +5,8 @@ ADD --chown=hdfs:hdfs startNameNode.sh /home/hdfs/
 
 RUN chmod +x /home/hdfs/*.sh
 
-EXPOSE 50070
+# For Hadoop 3.0 NameNode UI port has changed from 50070 to 9870
+EXPOSE 9870
 
 ENTRYPOINT ["/home/hdfs/initNameNode.sh"]
 
